# azure-edge-extensions-http-device-broker

./: README.md  broker-config.md
infra/akri/deploy/: akri-config-yaml  device-broker-config.yaml.template  discovery-handler-config.yaml.template  kustomization.yaml
infra/scripts/: delete-akri.sh  deploy-akri-config.sh
src/http-broker/: Cargo.toml  Dockerfile
src/http-broker/src/: error.rs  main.rs
src/http-discovery-handler/: Cargo.toml  Dockerfile  discovery-handler-config.yaml
src/http-discovery-handler/src/: discovery_handler.rs  main.rs
