[package]
name = "akri-http-discovery-handler"
version = "0.1.0"
edition = "2021"
rust-version = "1.73.0"

[dependencies]
akri-discovery-utils = { git = "https://github.com/project-akri/akri", package = "akri-discovery-utils" }
async-trait = "0.1.0"
chrono = { version = "0.4", features = ["serde"] }
env_logger = "0.10.0"
hyper = "0.14.2"
log = "0.4"
tokio = { version = "1.0.1", features = ["time", "net", "sync"] }
tokio-rustls = { version = "0.25.0"}
tokio-stream = { version =  "0.1", features = ["net"] }
tonic = { version = "0.10", features = ["tls"] }
reqwest = "0.11.0"
rumqttc = "0.24.0"
rustls = "0.23.8"
rustls-native-certs = { version = "0.7.0"}
rustls-webpki = { version = "0.102.2"}
rustls-pemfile = { version = "2.1.0"}
serde = "1.0"
serde_derive = "1.0"
serde_yaml = "0.8.11"
serde_json = "1.0.73"

[[bin]]
name = "akri-http-discovery-handler"
path = "src/main.rs"